--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ img {
 
 }
 
+
+
 .section_four {
     border-top: #192246 5px solid;
 }
@@ -43,16 +45,7 @@ img {
 }
 
 
-.navigation>div>a,
-button>a {
-    text-decoration: none;
-    color: white;
-}
 
-a {
-    text-decoration: none;
-    color: black;
-}
 
 .section_one {
     background: #1b36a3;
@@ -87,7 +80,7 @@ a {
     justify-content: center;
     gap: 50px;
     margin-bottom: 50px;
-    margin-top: 100px;
+    margin-top: 30px;
     flex-wrap: wrap;
 }
 
@@ -141,9 +134,10 @@ a {
 
 .item {
     line-height: 1.5;
-    flex-grow: 1;
-    border-left: 2px solid white;
+    border-left: 4px solid white;
     padding-left: 5px;
+    flex: 1;
+    width: fit-content;
 }
 
 .item>.secondary-text {
@@ -187,12 +181,29 @@ button {
 
 button>a:hover {
     color: #192246;
+    background-color: white;
 }
 
 button:hover {
     border: 1px solid #192246;
     background-color: white;
     color: #192246;
+}
+
+.navigation>div>a,
+button>a {
+    text-decoration: none;
+    color: white;
+}
+
+button>a:hover {
+    text-decoration: none;
+    color: #091442;
+}
+
+a {
+    text-decoration: none;
+    color: #091442;
 }
 
 .card-hover {
@@ -313,10 +324,12 @@ button:hover {
 
 main {
     /*background-color:#E6E6FA;*/
-    background: #0914421d;
+    background: #0d1a4e;
+    display: flex;
+    flex-wrap: wrap;
     line-height: 2em;
-    padding: 20px;
-    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
 }
 
 label {
@@ -330,10 +343,11 @@ input {
 
 #comment {
     width: 300px;
-    height: 100px;
+    height: 200px;
     padding: 5px 5px;
     margin: 8px 0;
     border-radius: 5px;
+    flex-grow: 1;
     border: 1px solid #f5f5f5;
 }
 
@@ -366,7 +380,7 @@ input {
 
 .profile-page .profile-header .profile-image img {
     border-radius: 50%;
-    width: 400px;
+    width: 140px;
     border: 3px solid #fff;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23)
 }
